deployment/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: gui
  name: gui-webserver-deployment
  labels:
    app: gui-webserver
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gui-webserver
  template:
    metadata:
      labels:
        app: gui-webserver
    spec:
      dnsPolicy: Default
      containers:
        - name: gui-webserver
          image: virtuatable/gui-webserver:<VERSION>
          args:
            - web
          ports:
            - containerPort: 9292
          resources:
            limits:
              cpu: 250m
              memory: 128Mi
            requests:
              cpu: 250m
              memory: 128Mi
