deployment/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: gui
  name: gui-webserver-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
  labels:
    app: gui-webserver
spec:
  rules:
    - http:
        paths:
          - path: "/.*"
            pathType: Prefix
            backend:
              service:
                name: gui-webserver-service
                port:
                  number: 80
